<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

	
		<!--App launch strings -->
    <string name="app_name">COOEY</string>
    <string name="login">Sign In</string>
    <string name="register">Create an Account</string>
    <string name="forgot">Lost your password?</string>
    
    <!-- Register step 1 strings  -->
    
    <string name="sign_up_with_email" translatable="false">Sign up with Email</string>
    <string name="facebook_app_id" translatable="false">1528675480748018</string>
    <string name="sign_In_FB" translatable="false">Sign In with FaceBook</string>
    <string name="username" translatable="false">Username or Email</string>
    <string name="password" translatable="false">Password</string>
    
     <!--  Register step 2 strings --> 
     <string name="get_started">To get started, log in using Facebook</string>
	
	<string name="firstName" translatable="false">First name</string>
	<string name="lastName" translatable="false">Last name</string>
	<string name="city" translatable="false">City</string>
	<string name="country" translatable="false">Country</string>
	<string name="address" translatable="false">Address</string>
	<string name="mobile" translatable="false">Phone number</string>
	<string name="email" translatable="false">Email ID</string>
	<string name="age" translatable="false">Age</string>
	<string name="submit" translatable="false">Sign up</string>
	
	<!--  Color codes for app  --> 
	<color name="theme">#60AFDF </color>
    <color name="hashColor">#CCCACB</color>
    <color name="whiteText">#FFFFFF</color>
	<color name="SignInButton">#3299CC</color>
	
	

    <string name="action_settings">Settings</string>
    <string name="add_BpTracker">Add BP Tracker</string>
    <string name="settings">TODO</string>
    <string name="medicineName">Medicine Name</string>
    <string name="doctorName">Doctor Name</string>
    <string name="doctor_Location">Doctors Location</string>
    <string name="skipScreen">Skip</string>
    <string name="add">Add</string>
    <string name="used_for">Used for</string>
    
    
    <string name="blood_prompt">Choose your blood group</string>
    
    <string-array name="blood_groups">
        <item>A +</item>
        <item>A -</item>
        <item>B +</item>
        <item>B -</item>
        <item>O +</item>
        <item>O -</item>
        <item>AB +</item>
        <item>AB -</item>
        <item>Others</item>
    </string-array>
 
    
</resources>
