<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
      <TableLayout android:background="@color/hashColor"
         android:gravity="center"
        android:stretchColumns="field"
        android:layout_marginTop="50dip"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <TableRow android:background="@color/whiteText">
            <EditText android:id="@id/doctorName"
            android:background="@null"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="20dip"
           	android:hint="@string/doctorName"
            android:inputType="none"
            android:padding="4dip" />
           </TableRow>
           
        <TableRow android:background="@color/whiteText">
            <EditText android:id="@id/doctorLocation"
            android:background="@null"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="20dip"
           	android:hint="@string/doctor_Location"
            android:inputType="none"
            android:padding="4dip" />
           </TableRow>
            
       </TableLayout>
         
           <Button
        android:id="@+id/addDoctorBtn"
        android:layout_width="300dip"
        android:layout_height="40dip"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="200dp"
        android:textColor="@color/whiteText"
        android:background="@color/SignInButton"
        android:onClick="AddDoctorBtnClicked"
        android:text="@string/add" />
      
 		
 		<Button
        android:id="@+id/skipBtn2"
        android:layout_width="300dip"
        android:layout_height="40dip"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="250dp"
        android:textColor="@color/whiteText"
        android:background="@color/SignInButton"
        android:onClick="skipBtnClicked"
        android:text="@string/skipScreen" />

</RelativeLayout>
