<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent" >
    
     <TableLayout android:background="@color/hashColor"
         android:gravity="center"
        android:stretchColumns="field"
        android:layout_marginTop="50dip"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <TableRow android:background="@color/whiteText" android:layout_marginTop="1dip">
            <EditText android:id="@id/medicineName"
            android:background="@null"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="20dip"
           	android:hint="@string/medicineName"
            android:inputType="none"
            android:padding="4dip" />
           </TableRow>
            <TableRow android:background="@color/whiteText" android:layout_marginTop="1dip">
            <EditText android:id="@id/used_for"
            android:background="@null"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="20dip"
           	android:hint="@string/used_for"
            android:inputType="none"
            android:padding="4dip" />
           </TableRow>
       </TableLayout>
           
       <Button
        android:id="@+id/addMedicineBtn"
        android:layout_width="300dip"
        android:layout_height="40dip"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="200dp"
        android:textColor="@color/whiteText"
        android:background="@color/SignInButton"
        android:onClick="AddMedicineBtnClicked"
        android:text="@string/add" />
 		
 		<Button
        android:id="@+id/skipBtn"
        android:layout_width="300dip"
        android:layout_height="40dip"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="250dp"
        android:textColor="@color/whiteText"
        android:background="@color/SignInButton"
        android:onClick="skipBtnClicked"
        android:text="@string/skipScreen" />
   
</RelativeLayout>
